1.Image Stretch issue 2.And UI changes in Assign Course to Class Implemented.

--- a/src/main/resources/css/gooru-classstyle.css
+++ b/src/main/resources/css/gooru-classstyle.css
@@ -1063,6 +1063,13 @@ select option {
 .selctListBox .listMenu .unitStyle:hover{
 	background:#f5f5f5;
 }
+.class-footer{
+	padding: 3px 15px 10px;
+	margin-top: 15px;
+	text-align: right;
+	border-top: 1px solid #e5e5e5;
+}
+
 
 #getStartedContainer .gettingStartedMain h1 {
     color: #515151;
@@ -1121,6 +1128,7 @@ text-align:left;
 	min-height: 42px;
 	line-height: 42px;
 }
+
 
 /** my classes new landing page **/
 
